resources/prometheus/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: prometheus
    deploymentconfig: prometheus
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: prometheus
        deploymentconfig: prometheus
    spec:
      containers:
      - args:
        - --config.file=/prometheus-data/prometheus.yml
        - --storage.tsdb.path=/prometheus-db
        image: prometheus:latest
        imagePullPolicy: Always
        name: prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /prometheus-db
          name: prometheus-db
        - mountPath: /prometheus-data
          name: prom-config-example-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-config
        name: prom-config-example-volume
      - name: prometheus-db
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: prometheus-db
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - prometheus
      from:
        kind: ImageStreamTag
        name: prometheus:latest
    type: ImageChange
